# Jeu-de-la-vie

./: CMakeLists.txt  Cell.h  CellMorte.h  CellObstacle.h  CellVivante.h  Config.h  Console.cpp  Console.h  Game.cpp  Game.h  IRule.h  Matrice.cpp  Matrice.h  README.md  RuleConway.h  Rules.h  Tests.h  Ui.cpp  Ui.h  main.cpp
